--- a/pokemon.html
+++ b/pokemon.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke</title>
+    <!-- 페이지의 표준 URL -->
+    <meta
+      property="og:url"
+      content="https://junhyun1001.github.io/Pokemon/pokemon.html"
+    />
+
+    <!-- 기사의 제목 -->
+    <meta property="og:title" content="포켓몬도감" />
+
+    <!-- 콘텐츠의 간단한 설명 -->
+    <meta property="og:description" content="포켓몬을 검색 해 보세요!" />
+
+    <!-- 표시되는 이미지의 URL -->
+    <meta property="og:image" content="./preview.jpg" />
+
     <!-- Tailwind CSS CDN 추가 -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
