--- a/pokemon.html
+++ b/pokemon.html
@@ -35,7 +35,7 @@
     <meta property="og:description" content="포켓몬을 검색 해 보세요!" />
 
     <!-- 표시되는 이미지의 URL -->
-    <meta property="og:image" content="./preview.jpg" />
+    <meta property="og:image" content="https://junhyun1001.github.io/Pokemon/preview.jpg" />
 
     <!-- Tailwind CSS CDN 추가 -->
     <script src="https://cdn.tailwindcss.com"></script>
